<resources>
    <string name="app_name">activitylisting</string>
    <string name="travel">travel</string>
    <string name="local">local</string>
    <string name="activities">Activitites</string>
    <string name="eatout">Eat out</string>
    <string name="events">Events</string>
    <string name="you">You</string>
    <string name="activities_frag">ActivitiesFragment</string>
    <string name="eatoutfrag">EatOutFragment</string>
    <string name="eventsfrag">EventsFragment</string>
    <string name="youfrag">YouFragment</string>
    <string name="deals">DEALS</string>
    <string name="featured">Featured</string>
    <string name="account">Account</string>
    <string name="bookings">Bookings</string>
    <string name="bookings_info_title">Your trips and bookings reside here</string>
    <string name="sign_in_info_subtitle">Sign in to access them</string>
    <string name="morning_messsage">Good morning</string>
    <string name="signin_title">Do more with accounts</string>
    <string name="signin_subtitle"><![CDATA[Manage trips, make changes, save cards & faster refunds]]></string>
    <string name="singin_button_text">Sign In or Register</string>
</resources>
