<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="20dp"
              android:background="@android:color/white"
              android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent"
              android:text="@string/signin_title"
              android:textSize="20dp"
              android:gravity="center"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:text="@string/signin_subtitle"
              android:textSize="13dp"
              android:gravity="center"
              android:layout_height="wrap_content"/>

    <Button android:layout_width="wrap_content"
            android:width="180dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:background="@color/signinbutton_color"
            android:textColor="@android:color/white"
            android:text="@string/singin_button_text"
            android:layout_height="wrap_content"/>

</LinearLayout>