<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:id="@+id/booking_info_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView android:layout_width="match_parent"
                  android:text="@string/bookings"
                  android:textColor="@color/light_gray_616161"
                  android:padding="10dp"
                  android:layout_height="wrap_content"/>

        <RelativeLayout android:layout_width="match_parent"
                        android:padding="20dp"
                        android:background="@android:color/white"
                        android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/layout_palceholder"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentLeft="true"/>


            <TextView
                    android:id="@+id/layout_title"
                    android:layout_width="wrap_content"
                    android:text="@string/bookings_info_title"
                    android:textColor="@color/light_gray_616161"
                    android:layout_toRightOf="@+id/layout_palceholder"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/layout_subtitle"
                    android:layout_width="wrap_content"
                    android:textColor="@color/light_gray_dark_shade"
                    android:layout_toRightOf="@+id/layout_palceholder"
                    android:text="@string/sign_in_info_subtitle"
                    android:layout_below="@+id/layout_title"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

</merge>